# cleanpy

./: .gitignore  .travis.yml  LICENSE  Makefile  README.rst  appveyor.yml  pylama.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  lint_and_test.yml  publish.yml  tests.yml
cleanpy/: __init__.py  __main__.py  __version__.py  _const.py  _finder.py  _manipulator.py  main.py
project_name/: __init__.py  __version__.py
requirements/: test_requirements.txt
snap/: snapcraft.yaml
test/: test_cli.py  test_template.py
